<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FootballPredictor</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_register">Register!</string>
    <string name="check_username_availability">CHECK USERNAME ENTER NAME OR USERNAMEENTER NAME OR USERNAMEENTER NAME OR USERNAMEAVAILABILITY</string>
    <string name="default_status">Fill up the form</string>
    <string name="sign_up">SIGN UP</string>
    <string name="enter_name">Name</string>
    <string name="enter_email">Email</string>
    <string name="fav_club">Favourite Club</string>
    <string name="nationality">Indian?</string>
    <string name="enter_username">Choose Username</string>
    <string name="enter_pass">Password</string>
    <string name="change_pass">Change Password</string>
    <string name="confirm_pass">Enter Current Password</string>
    <string name="submit">SUBMIT</string>
    <string name="logout">LOGOUT</string>
    <string name="GroupListProfilePage">MY GROUPS LIST</string>
    <string name="team1">Arsenal</string>
    <string name="team2">Bournemouth</string>
    <string name="team3">Burnley</string>
    <string name="team4">Chelsea</string>
    <string name="team5">Crystal Palace</string>
    <string name="team6">Everton</string>
    <string name="team7">Hull City</string>
    <string name="team8">Leicester City</string>
    <string name="team9">Liverpool</string>
    <string name="team10">Manchester City</string>
    <string name="team11">Manchester United</string>
    <string name="team12">Middlesborough</string>
    <string name="team13">Southampton</string>
    <string name="team14">Stoke City</string>
    <string name="team15">Sunderland</string>
    <string name="team16">Swansea</string>
    <string name="team17">Tottenham Hotspurs</string>
    <string name="team18">Watford</string>
    <string name="team19">West Bromwich Albion</string>
    <string name="team20">West Ham United</string>
    <string name="team_select">Select Team</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
	<string name="points_profile_page">POINTS : </string>
    <string name="versus">vs</string>
    <string name="createNewGroup">Create Group</string>
    <string name="rank">#</string>
    <string name="user">User</string>
    <string name="points">Pts</string>
    <string name="enter_away_score">Away Score</string>
     <string name="latest_score">Latest Match Day</string>
     <string name="remember">Remember Me</string>
     <string name="sign_in">SIGN IN</string>
     <string name="new_user">NEW USER?</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="enter_uname_hint">ENTER USERNAME</string>
     <string name="enter_pass_hint">ENTER PASSWORD</string>
     <string name="enter_home_score">Home Score</string>
   	 <string name="matches">Matches</string>
   	 <string name="savepredictions">SAVE PREDICTION</string>
   	 <string name="team_logo">Team Logo</string>
     <string name="date">Date</string>
   	<string name="stadium">Stadium</string>
   	<string name="search_hint">ENTER NAME OR USERNAME</string>
   	<string name="total_matches">Total Matches</string>
   	<string name="net_score">Total Score</string>
   	<string name="predictions">Predictions</string>
   	<string name="predictions_short">No. of pdctns</string>
   	<string name="matchday">Matchday</string>
   	<string name="points2">POINTS</string>
   	<string name="lastmatchdaypoints">Last Matchday Points</string>
   	<string name="requests">Requests</string>
   	<string name="later">Later</string>
   	<string name="leaderboard">Leaderboard</string>
   	<string name="general_stat">Performance Overview</string>
   	
   			
</resources>
