<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zombieinawaterbottle.footballpredictor.HomeScreen" >

    <item
        android:id="@+id/menu_logout"
        android:showAsAction="withText|ifRoom"
        android:title="@string/logout"
        android:icon="@drawable/ic_exit_to_app_white_36dp"
        />
   
     <item
        android:id="@+id/menu_requests"
        android:showAsAction="withText|ifRoom"
        android:title="@string/requests"
        android:icon="@drawable/ic_group_white_36dp"
        />
   	   <item
        android:id="@+id/menu_leaderboard"
        android:showAsAction="always"
        android:title="@string/leaderboard"
        android:icon="@drawable/ic_public_white_36dp"
        />
   
</menu>
