<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
<TableRow 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:background="@drawable/grouplist_shape"
   >
	    
	<TextView android:id="@+id/btn_member_rank"
	    android:layout_width="0dp"
	    android:layout_weight="0.3"
	    android:text="@string/rank"
	    android:gravity="center"
	    android:textColor="@color/offwhitetext2"
	    android:layout_height="match_parent"/>
	
	<TextView android:id="@+id/btn_member_name"
	    android:layout_width="0dp"
	    android:layout_weight="1"
	    android:text="@string/user"
	    android:textColor="@color/offwhitetext2"
	    
	    android:gravity="center"
	    android:layout_height="match_parent"/>
	
	<TextView android:id="@+id/btn_member_points"
	    android:layout_width="0dp"
	    android:layout_weight="0.5"
	    android:text="@string/points"
	    
	    android:textColor="@color/offwhitetext2"
	    android:gravity="center"
	    
	    android:layout_height="match_parent"/>
	
	<TextView android:id="@+id/btn_member_predictions"
	    android:layout_width="0dp"
	    android:layout_weight="0.5"
	    android:text="@string/matches"
	    android:gravity="center"
	    
	    android:textColor="@color/offwhitetext2"
	    android:layout_height="match_parent"/>
	
	<TextView android:id="@+id/btn_member_latest"
	    android:layout_width="0dp"
	    android:layout_weight="0.5"
	    android:gravity="center"
	    
	    android:textColor="@color/offwhitetext2"
	    android:text="@string/latest_score"
	    android:layout_height="match_parent"/>
    
</TableRow>
<ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_gravity="center"
        />
    
<ScrollView android:layout_width="match_parent"
    android:layout_height="fill_parent">    
    
<TableLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/displayRank"
    android:orientation="vertical"
    
    android:background="@color/transparent" >
</TableLayout>
</ScrollView>
</LinearLayout>